--- a/child_pages/vsb-elections/Candidates/carter.html
+++ b/child_pages/vsb-elections/Candidates/carter.html
@@ -58,7 +58,12 @@
         </div>
         <h4 class="sub-heading">individual agenda</h4>
             <div class="agenda-thesis">
-                He wants to bring his skills of promoting transparency and accountability to the board of education. He wants to promote parental involvement in all aspects of children's education. He wants to improve safe learning environments for students and staff. He wants to ensure students receive a rigorous curriculum to help prepare them for college and careers. He wants to expand career and technical opportunities for students.
+                He wants to bring his skills of promoting transparency and accountability to the board of education. 
+                He wants to promote parental involvement in all aspects of children's education.
+                He wants to improve safe learning environments for students and staff. 
+                He wants to ensure students receive a rigorous curriculum to help prepare them for college and careers. 
+                He wants to expand career and technical opportunities for students.
+                He wants to promote strong community partnerships.
             </div>
             
             <h4 class="sub-heading">policy positions</h4>
@@ -68,6 +73,7 @@
             <h4 class="sub-heading">experience</h4>
             <div class="experience">
                 Carter is a lifelong resident of Vineland. He received postsecondary education from Cumberland County College, American University, and Villanova University. He works as a Chief of Staff in the New Jersey Legislature.
+                Regularly participates in civic, religious, and community activities.
             </div>
     </div>
  </div>   
