starting makema page

--- a/child_pages/vsb-elections/Candidates/makema.html
+++ b/child_pages/vsb-elections/Candidates/makema.html
@@ -57,7 +57,13 @@
             <a href="https://www.facebook.com/media/set/?set=a.107759325384112&type=3" target="_blank" rel="noopener noreferrer" class="website-link">Facebook</a>
         </div>
             <div class="agenda-thesis">
-               
+               Supports methods to ensure school safety for students and staff. 
+               <br>
+               Redirecting focus on programs that reinforce school resilience for teachers and students.
+               <br>
+               Restoring community faith in the Vineland School System and its administration's ability to effectively lead.
+               <br>
+               Ensuring that teachers, parents, students, and residents have representation in decision making regarding practices, policies, and procedures.
             </div>
             <h4 class="sub-heading">party messaging</h4>
             
