makema radio show event added

--- a/child_pages/events.html
+++ b/child_pages/events.html
@@ -47,21 +47,13 @@
         <div class="main-content-with-box-shadow-events">
             <h1 class="events-h1">Events</h1>
             
+            
             <div class="event-card">
                 <ul class="event-info">
-                    <li class="name"><strong>Republican Breakfast ***Different Location***</strong></li>
-                    <li class="description">Bi-weekly event where county residents can speak with Republican candidates in person.</li>
-                    <li class="date-and-time">10/07/23 - 8:30am</li>
-                    <li class="location">Mauricetown Fire Company - 9544 Noble Street Mauricetown, NJ</li>
-                </ul>
-            </div>
-            <div class="event-card">
-                <ul class="event-info">
-                    <li class="name"><strong>Commissioner Work Session Meeting</strong></li>
-                    <li class="description">Meetings where County Commissioners vote on current legislation. Time is given for county residents to comment publicly.</li>
-                    <li class="date-and-time">10/10/23 - 6pm</li>
-                    <li class="location">Administration Bldg - 164 W. Broad St. Bridgeton, NJ</li>
-                    <li><a href="https://www.cumberlandcountynj.gov/meetings">Meeting Info on County Calendar</a></li>
+                    <li class="name"><strong>Meet School Board Candidates on We Have Gospel Radio Show</strong></li>
+                    <li class="description">Makema Douglas will be on the air to introduce herself.</li>
+                    <li class="date-and-time">10/14/23 - 9am</li>
+                    <li class="location">Radio Show - WEHA Gospel 88.7 FM, WEHA Gospel 100.3 FM</li>
                 </ul>
             </div>
             <div class="event-card">
