--- a/child_pages/vsb-elections/Candidates/makema.html
+++ b/child_pages/vsb-elections/Candidates/makema.html
@@ -56,6 +56,7 @@
         <div class="website">
             <a href="https://www.facebook.com/media/set/?set=a.107759325384112&type=3" target="_blank" rel="noopener noreferrer" class="website-link">Facebook</a>
         </div>
+        <h4 class="sub-heading">Personal Agenda</h4>
             <div class="agenda-thesis">
                Supports methods to ensure school safety for students and staff. 
                <br>
@@ -65,9 +66,7 @@
                <br>
                Ensuring that teachers, parents, students, and residents have representation in decision making regarding practices, policies, and procedures.
             </div>
-            <h4 class="sub-heading">party messaging</h4>
             
-            <h4 class="sub-heading">policy positions</h4>
             <div class="policy-positions">
                 
             </div>
