header added to makemas page

--- a/child_pages/vsb-elections/Candidates/makema.html
+++ b/child_pages/vsb-elections/Candidates/makema.html
@@ -74,7 +74,9 @@
                <br>
                Stands on fair, reasonable, and equitable thinking and representation. <a href="https://www.facebook.com/reel/250888890835092" target="_blank" rel="noopener noreferrer" class="website-link">Facebook Reel</a>
             </div>
-            
+
+            <h4 class="sub-heading">Policy Positions</h4>
+
             <div class="policy-positions">
                 <a href="https://www.facebook.com/reel/252278514447760" target="_blank" rel="noopener noreferrer" class="website-link">Facebook Reel</a>
                 <br>
