vsb issues page

--- a/child_pages/vsb-elections/vsb_election_issues.html
+++ b/child_pages/vsb-elections/vsb_election_issues.html
@@ -49,205 +49,70 @@
             <div class="issues-content">
                 <h3 class="issues-heading">County Level Issues</h3>
                 <div class="issues-card">
-                    <h5 class="issues-sub-heading">Middle Mile Broadband</h5>
+                    <h5 class="issues-sub-heading">Transparency and Accountability</h5>
                     <div class="issues-sub-content">
-                        This has been the most popular issue over the past several
-                        months. As part of the Inflation Reduction Act, Senator Van Drew applied for
-                        Cumberland County to receive a federal grant to upgrade our broadband infrastructure.
-                        The full grant was approximately $35 million, which Cumberland County would need to
-                        spend about $5 million of its own money. The controversy over moving forward on this
-                        project was that the ‘middle mile’ grant only extends dark fiber around the general area
-                        of the county but does not guarantee that any homes will actually be hooked up in the
-                        future. That part would rely on internet companies such as Comcast and Verizon, or
-                        individual residents, to finish the connection. There was also no feasibility study
-                        finished. There was much passionate debate at county meetings on whether to move
-                        forward or not, and finally the county commission voted in favor of moving forward.
-                        Since the vote, Director Commissioner Albrecht informed me that the county is already
-                        in talks to receive ‘end mile’ money, which would help individual customers to connect
-                        their specific homes.
+                        While none of the candidates have specifically stated what they mean about transparency and accountability
+                        in the schools, several have mentioned it in their platforms. One might assume from the media over the past
+                        several years that surprising topics are being included in school curriculums, poor student output, parents
+                        right to involvement, and cooperation with administration is what is implied by transparency and accountability.
                     </div>
                 </div>
                 <div class="issues-card">
-                    <h5 class="issues-sub-heading">County Jail</h5>
+                    <h5 class="issues-sub-heading">School Safety</h5>
                     <div class="issues-sub-content">
-                        There seems to be several problems revolving around the county jail. The
-                        most obvious of which is an ongoing class action lawsuit about the mistreatment of prisoners 
-                        during the pandemic. This seems to have led to some discussion about renovating the jail while 
-                        focusing on issues such as mental health, rehabilitation, etc.
+                        With the rise of school shootings, student behavior issues, and lack of properly trained security, several
+                        candidates have raised the issue of school safety. 
                     </div>
                 </div>
                 <div class="issues-card">
-                    <h5 class="issues-sub-heading">Nabb Ave Extension</h5>
+                    <h5 class="issues-sub-heading">Rigorous Curriculum</h5>
                     <div class="issues-sub-content">
-                        Nabb Ave is a road in Millville which is close to both its business and
-                        industrial districts. Extending it is proposed to have an effect in which trucks delivering
-                        goods via route 55 would have easier access, which might reduce transportation costs,
-                        which could help overall business in the county.
+                        Students ought to be well prepared for college and careers, and several candidates seem to be concerned with
+                        ensuring our students will in fact receive top-notch education and training.
                     </div>
                 </div>
                 <div class="issues-card">
-                    <h5 class="issues-sub-heading">Sewage/Septic infrastructure</h5>
+                    <h5 class="issues-sub-heading">Fiscal Responsibility</h5>
                     <div class="issues-sub-content">
-                        The county seems to have outdated sewage and septic
-                        systems, which leads to many problems regarding business development and home real
-                        estate (such as building new homes or selling homes). I’ve been quoted costs
-                        anywhere from $15,000 - $90,000 for sewage/septic upgrades of individual properties.
+                        With school funding being a persistent issue, several candidates are focused on making sure our funding is 
+                        being spent wisely.
                     </div>
                 </div>
                 <div class="issues-card">
-                    <h5 class="issues-sub-heading">Tourist Destination Goals</h5>
+                    <h5 class="issues-sub-heading">Mental Health</h5>
                     <div class="issues-sub-content">
-                        Cumnberland County has been working with Cape May County to promote general
-                        tourism in the area. With Cape May already having an established tourism industry,
-                        many tourists and vacationers book hotels in Cumberland County during their trips.
-                        Both counties are working together to increase tourism in Cumberland County, as that will
-                        help Cumberland County apply for state tourism grants, provide tourism packages for
-                        both counties, and help develop business in both counties.
+                        Even prior to the pandemic, and even more so after, mental health for both students and staff is a rising
+                        issue that several candidates want to focus on. Decreasing mental health can lead to low morale and output.
                     </div>
                 </div>
                 <div class="issues-card">
-                    <h5 class="issues-sub-heading">Homelessness</h5>
+                    <h5 class="issues-sub-heading">School System Trust</h5>
                     <div class="issues-sub-content">
-                        Homeslessness is on the rise throughout the country and Cumberland
-                        County is no exception. Areas of Landis Avenue in Vineland and the
-                        business districts in Bridgeton or Millville are examples of the problem growing.
+                        Like many institutions throughout the nation over the past several years, some candidates are focusing on 
+                        restoring trust in the school system.
                     </div>
                 </div>
                 <div class="issues-card">
-                    <h5 class="issues-sub-heading">Crime</h5>
+                    <h5 class="issues-sub-heading">Fair Wages</h5>
                     <div class="issues-sub-content">
-                        Much like homelessness, crime seems to be a growing problem in the county.
-                        With discussion of gangs in Bridgeton regularly occurring at county meetings,
-                        what are our candidates planning to do to handle crime?
+                        Staff salaries at schools in the county is an ongoing issue and some candidates are making it a priority.
                     </div>
                 </div>
                 <div class="issues-card">
-                    <h5 class="issues-sub-heading">Dangerous Off-road vehicles</h5>
+                    <h5 class="issues-sub-heading">Equity</h5>
                     <div class="issues-sub-content">
-                        Off-road vehicles such as dirt-bikes and ATVs
-                        have been a problem in the county for years. When addressed at county meetings,
-                        commissioners claim that the police’s hands are tied because of insurance and state law
-                        related issues. Will we ever solve this problem?
+                        Equitable representation in the school system is an ongoing issue and some candidates are making it a priority.
                     </div>
                 </div>       
+                <div class="issues-card">
+                    <h5 class="issues-sub-heading">Contentious Curriculum</h5>
+                    <div class="issues-sub-content">
+                        Several topics such as critical race theory, gender identity, and revisionist history have been the subject of
+                        much debate and candidates have differing views on how to handle them.
+                    </div>
+                </div>     
             </div>
-            <div class="issues-content">
-                <h3 class="issues-heading">State Level Issues</h3>
-                <div class="issues-card">
-                    <h5 class="issues-sub-heading">Immigration – Sanctuary State Status</h5>
-                    <div class="issues-sub-content">
-                        With New Jersey being a sanctuary state and the recent influx in NYC, it has
-                        been rumored that a plane full of migrants will be flown to the Atlantic City airport. Should
-                        they day arise, are we prepared to handle our own influx of migrants?
-                    </div>
-                </div>       
-                <div class="issues-card">
-                    <h5 class="issues-sub-heading">Trans Rights</h5>
-                    <div class="issues-sub-content">
-                        The topic of trans rights has been a hot topic for a while… where do the
-                        candidates stand on the following commonly debated sub-issues:
-                        <ol class="sub-issues-ol">
-                            <li>School Sports</li>
-                            <li>Gendered bathrooms</li>
-                            <li>Trans people and gender specific prisons</li>
-                            <li>Parents rights vs school policy</li>
-                        </ol>
-                    </div>
-                </div>       
-                <div class="issues-card">
-                    <h5 class="issues-sub-heading">Renewable Energy and Wind Turbines</h5>
-                    <div class="issues-sub-content">
-                        A recurring topic in the news is how the recent wind
-                        turbines which have been installed off-shore could be endangering the lives of whales, many
-                        of which have washed ashore.
-                    </div>
-                </div>       
-                <div class="issues-card">
-                    <h5 class="issues-sub-heading">Election Integrity and Electoral College Slate of Electors Authenticity</h5>
-                    <div class="issues-sub-content">
-                        One of Donald Trump’s indictments has to do with an alleged
-                        alternate slate of electors being used to call the 2020 election into question. Exactly how do
-                        our party’s slate of electors work and what can our candidates tell us to ensure us that no
-                        fraudlent electors are meddling with our elections? Furthermore, what can our candidates tell us in regards to
-                        ensuring us overall election integrity will be upheld?
-                    </div>
-                </div>       
-                <div class="issues-card">
-                    <h5 class="issues-sub-heading">Abortion Policy</h5>
-                    <div class="issues-sub-content">
-                        With the recent overturning of Roe v Wade, what are our candidates exact
-                        stances on abortion policy? More specifically, what are their ideal policies vs their hard lines
-                        with respect that both sides of the aisle may ultimately need to come to a compromise?
-                    </div>
-                </div>       
-                <div class="issues-card">
-                    <h5 class="issues-sub-heading">Covid Policy</h5>
-                    <div class="issues-sub-content">
-                        With rumors that mask mandates and boosters may be returning, how do our
-                        candidates feel about the implementation of covid policy?
-                    </div>
-                </div>       
-                <div class="issues-card">
-                    <h5 class="issues-sub-heading">Budget and Taxes</h5>
-                    <div class="issues-sub-content">
-                        With our state reaching $200 billion in debt, how will our candidates
-                        ensure us that they will push for fiscal responsibility?
-                    </div>
-                </div>       
-                <div class="issues-card">
-                    <h5 class="issues-sub-heading">Healthcare</h5>
-                    <div class="issues-sub-content">
-                        With universal healthcare being a recurring topic, how do our candidates
-                        propose to handle healthcare moving forward?
-                    </div>
-                </div>       
-                <div class="issues-card">
-                    <h5 class="issues-sub-heading">Education</h5>
-                    <div class="issues-sub-content">
-                        With many areas throughout the country having education challenges, what
-                        plans do our candidates have to address this issue?
-                    </div>
-                </div>       
-                <div class="issues-card">
-                    <h5 class="issues-sub-heading">Infrastructure</h5>
-                    <div class="issues-sub-content">
-                        With our county being way behind on issues like access to broadband and
-                        water/sewage standards, what are our candidates plans to improve overall infrastructure?
-                    </div>
-                </div>       
-                <div class="issues-card">
-                    <h5 class="issues-sub-heading">Gun Rights</h5>
-                    <div class="issues-sub-content">
-                        With gun rights being a recurring topic, where do our candidates stand on the
-                        issue?
-                    </div>
-                </div>       
-            </div>
-            <div class="issues-content">
-                <h3 class="issues-heading">Sheriff Election</h3>
-                <h5 class="issues-sub-heading">Crime</h5>
-                <div class="issues-sub-content">
-                    Crime seems to be a growing problem in the county.
-                    With discussion of gangs in Bridgeton regularly occurring at county meetings,
-                    what are our sheriff candidates planning to do to handle crime?
-                </div>
-                <h5 class="issues-sub-heading">Dangerous Off-Road Vehicles</h5>
-                <div class="issues-sub-content">
-                    Off-road vehicles such as dirt-bikes and ATVs
-                    have been a problem in the county for years. When addressed at county meetings,
-                    commissioners claim that the police’s hands are tied because of insurance and state law
-                    related issues. Will we ever solve this problem?
-                </div>
-            </div>
-            <div class="issues-content">
-                <h3 class="issues-heading">Surrogate Election</h3>
-                <h5 class="issues-sub-heading">Service Quality</h5>
-                <div class="issues-sub-content">
-                    Current surrogate operations for the county have been criticized as impersonal.  There have been
-                    calls to also update processes to allow county residents to fill out surrogate forms for wills and probate
-                    online.  What are each candidates policy objectives to address these concerns.
-                </div>
-            </div>
+            
         </div>
     </div>
     
