--- a/child_pages/cc-elections/cc_election_candidates.html
+++ b/child_pages/cc-elections/cc_election_candidates.html
@@ -24,7 +24,7 @@
                     <ul class="links">
                         <li class="link"><a href="../../index.html">Home</a></li>
                         <li class="link"><a href="../cc-elections/cc_election_candidates.html">Cumberland County Elections</a></li>
-                        <li class="link"><a href="../cc-elections/cc_election_issues.html">Issues</a></li>
+                        <li class="link"><a href="../cc-elections/cc_election_issues.html">County Issues</a></li>
                         <li class="link"><a href="../vsb-elections/vsb_election_candidates.html">Vineland School Board Elections</a></li>
                         <li class="link"><a href="../vsb-elections/vsb_election_issues.html">School Board Issues</a></li>
                         <li class="link"><a href="../cc-elections/unanswered_questions.html">Unanswered Questions</a></li>
