delete county level issues header on school board issues page

--- a/child_pages/cc-elections/cc_election_issues.html
+++ b/child_pages/cc-elections/cc_election_issues.html
@@ -42,7 +42,7 @@
 
     <div class="container">
         <div class="main-content-with-box-shadow-issues">
-            <h1 class="issues-h1">Issues</h1>
+            <h1 class="issues-h1">County Issues</h1>
             <div class="issues-short-description">
                 An organized list of issues of contention this election cycle.
             </div>
