call to action landing section of homepage built and styled

--- a/index.html
+++ b/index.html
@@ -38,15 +38,18 @@
             </div>
         </div>
     </div>
-    <img src="assets/lighthouse.jpg" alt="cumberland county symbol" id="jumbotronjawn">
-    <div class="container">
+    <div class="cta-landing">
         <div class="logo">
-            <img src="assets/INFORM THE.jpg" alt="inform the vote logo" class="logo-img">
+            <img src="assets/INFORM THE_no_bg.png" alt="inform the vote logo" class="logo-img">
         </div>
         <div class="container-subh">
-            <p>Clear, up to date information on candidates running for election relevant to Cumberland County NJ citizens and where they stand on the issues at hand.</a>
+            <section class="cta-text">
+                Clear, up to date information on candidates running in elections relevant to Cumberland County NJ citizens
+            </section>
             <p>All information gathered by independent citizens of Cumberland County.</p>
         </div>
+    </div>
+    <div class="container">
         <div class="main-content-box-with-shadow">
             <h4 class="ms-heading">Mission Statement</h4>
             <div class="ms-content">
