uneccessary period removed from cta text

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <section class="cta-text">
                 Clear, up to date information on candidates running in elections relevant to Cumberland County NJ citizens
             </section>
-            <p>All information gathered by independent citizens of Cumberland County.</p>
+            <p>All information gathered by independent citizens of Cumberland County</p>
         </div>
     </div>
     <div class="container">
