added tip to the Study the Candidates section

--- a/child_pages/get-involved.html
+++ b/child_pages/get-involved.html
@@ -56,11 +56,18 @@
                 <div class="get-involved-steps-content">
                     <ol class="gi-ol">
                         <li class="gl-li">
-                            <strong>Study the Candidates:</strong> The most straightforward way to understand who's running and what they stand for is by checking out our consolidated Candidates page. To our knowledge, this is the most efficient means to learn about the candidates. 
+                            <strong>Study the Candidates:</strong> The most straightforward way to understand who's running and what 
+                            they stand for is by checking out our consolidated Candidates page. To our knowledge, this is the most 
+                            efficient means to learn about the candidates. Also, be sure to pro-actively follow the candidates on 
+                            social media to stay up to date. And by pro-actively I mean set aside time once every few weeks to check
+                            their pages, because simply clicking the follow buttons may lead to posts getting lost in the clutter, or
+                            even missing shadow-banned posts.
+                            <br>
                             <br>
                             <center><a href="cc-elections/cc_election_candidates.html">County and State Candidates.</a></center> 
                             <br>
                             <center><a href="vsb-elections/vsb_election_candidates.html">Vineland School Board Candidates</a></center>
+                            <br>
                         </li>
                         <li class="gl-li">
                             <strong>Internalize the Popular Issues:</strong> Before you can assess a candidate's suitability, you need to know where you stand on the key issues. Our Issues page offers a comprehensive overview of ongoing and popular issues at the county and state level. This will help you prepare questions for the candidates and understand what matters most to you. <a href="/child_pages/cc-elections/cc_election_issues.html">Learn more.</a>
