--- a/child_pages/get-involved.html
+++ b/child_pages/get-involved.html
@@ -70,7 +70,16 @@
                             <br>
                         </li>
                         <li class="gl-li">
-                            <strong>Internalize the Popular Issues:</strong> Before you can assess a candidate's suitability, you need to know where you stand on the key issues. Our Issues page offers a comprehensive overview of ongoing and popular issues at the county and state level. This will help you prepare questions for the candidates and understand what matters most to you. <a href="/child_pages/cc-elections/cc_election_issues.html">Learn more.</a>
+                            <strong>Internalize the Popular Issues:</strong> Before you can assess a candidate's suitability, you need 
+                            to know where you stand on the key issues. Our Issues page offers a comprehensive overview of ongoing and 
+                            popular issues at the county and state level. This will help you prepare questions for the candidates and 
+                            understand what matters most to you. 
+                            <br>
+                            <br>
+                            <a href="/child_pages/cc-elections/cc_election_issues.html">County and State Issues.</a>
+                            <br>
+                            <a href="/child_pages/vsb-elections/vsb_election_issues.html">County and State Issues.</a>
+                            <br>
                         </li>
                         <li class="gl-li">
                             <div class="gl-li-title"><strong>Show Up:</strong> Go to events where candidates will be present and ask questions that will help you make an informed voting decision. Use our consolidated calendar as a guide for what events to attend. <a href="events.html">Learn more.</a>
