some more info on the get involved page

--- a/child_pages/get-involved.html
+++ b/child_pages/get-involved.html
@@ -76,16 +76,25 @@
                             understand what matters most to you. 
                             <br>
                             <br>
-                            <a href="/child_pages/cc-elections/cc_election_issues.html">County and State Issues.</a>
+                            <center><a href="/child_pages/cc-elections/cc_election_issues.html">County and State Issues.</a></center>
                             <br>
-                            <a href="/child_pages/vsb-elections/vsb_election_issues.html">County and State Issues.</a>
+                            <center><a href="/child_pages/vsb-elections/vsb_election_issues.html">County and State Issues.</a></center>
                             <br>
                         </li>
                         <li class="gl-li">
-                            <div class="gl-li-title"><strong>Show Up:</strong> Go to events where candidates will be present and ask questions that will help you make an informed voting decision. Use our consolidated calendar as a guide for what events to attend. <a href="events.html">Learn more.</a>
+                            <div class="gl-li-title"><strong>Show Up:</strong> Go to events where candidates will be present and ask 
+                                questions that will help you make an informed voting decision. Use our consolidated calendar as a 
+                                guide for what events to attend. Be sure to check back regularly as the parties are a bit scattered
+                                and disorganized when posting events, so it is tough for us to efficiently and promptly post events.
+                                <br>
+                                <br>
+                                <center><a href="events.html">Our Calendar.</a></center>
+                                <br>
                                 <p>
-                                    In terms of what will most effectively inform your vote, we suggest the following events in order of relevance:
+                                    In terms of what will most effectively inform your vote, we suggest the following events in order 
+                                    of relevance:
                                 </p>
+                                <br>
                             </div>
                             <ul class="gi-ul">
                                 <li class="gi-ul-li">
@@ -99,15 +108,28 @@
                                     <p>**Important Note - The location of these breakfasts are always subject to change, be sure to check event info of each individual event date.</p>
                                 </li>
                                 <li class="gi-ul-li">
-                                    <strong>County Commissioner Meetings:</strong> These meetings are a great way to understand how local government functions and what issues are currently at the forefront. Each meeting has a 'public comments' section, allowing you to actively participate. Prepare your questions and bring a notebook to jot down important points. <a href="https://informthevotecc.netlify.app/child_pages/events">See our events page for more info.</a>
+                                    <strong>County Commissioner Meetings:</strong> These meetings are a great way to understand how 
+                                    local government functions and what issues are currently at the forefront. Each meeting has a 
+                                    'public comments' section, allowing you to actively participate. Prepare your questions and bring 
+                                    a notebook to jot down important points.
+                                    <br>
+                                    <br>
+                                    <center><a href="https://informthevotecc.netlify.app/child_pages/events">See our events page for more info.</a></center>
+                                    <br>
                                 </li>
                                 <li class="gi-ul-li">
                                     <strong>Casual County Events:</strong> Events like Deerfield Day give you a chance to interact with candidates, even if the main focus isn't on the upcoming election. However, these events are often poorly advertised, which we hope to change. 
-                                    <a href="https://explorecumberlandnj.com/calendar/">Visit the Cumberland County 4H Event Calendar for more info.</a>
+                                    <br>
+                                    <br>
+                                    <center><a href="https://explorecumberlandnj.com/calendar/">Visit the Cumberland County 4H Event Calendar for more info.</a></center>
+                                    <br>
                                 </li>
                                 <li class="gi-ul-li">
                                     <strong>Miscellaneous County Department Meetings:</strong> These meetings can offer a deeper dive into the workings of the county. While they may not directly relate to the upcoming election, they provide context for larger political issues and can be beneficial for those with extra time and curiosity.
-                                    <a href="https://www.cumberlandcountynj.gov/meetings">Visit the Cumberland County public meetings calendar for more info.</a>
+                                    <br>
+                                    <br>
+                                    <center><a href="https://www.cumberlandcountynj.gov/meetings">Visit the Cumberland County public meetings calendar for more info.</a></center>
+                                    <br>
                                 </li>
                             </ul>
                         </li>
