link label to vsb issues page corrected on get involved page

--- a/child_pages/get-involved.html
+++ b/child_pages/get-involved.html
@@ -78,7 +78,7 @@
                             <br>
                             <center><a href="/child_pages/cc-elections/cc_election_issues.html">County and State Issues.</a></center>
                             <br>
-                            <center><a href="/child_pages/vsb-elections/vsb_election_issues.html">County and State Issues.</a></center>
+                            <center><a href="/child_pages/vsb-elections/vsb_election_issues.html">Vineland School Board Issues.</a></center>
                             <br>
                         </li>
                         <li class="gl-li">
