--- a/child_pages/cc-elections/Candidates/laspata.html
+++ b/child_pages/cc-elections/Candidates/laspata.html
@@ -49,7 +49,11 @@
         </div>
     </div>
     <div class="candidate-pic-box">
+        <img src="../../../assets/arrow.jpg" alt="an arrow pointing to the leftt" class="left-arrow hide">
         <img class="cover" src="../../../assets/candidates/charles_laspata.jpg" class="candidate-pic">
+        <a href="../Candidates/white-morris.html" class="next-candidate">
+            <img src="../../../assets/arrow.jpg" alt="an arrow pointing to the right" class="right-arrow">
+        </a>
     </div>
     <div class="candidate-agenda">
         <h4 class="sub-heading">campaign website</h4>
