added some school board info on the get involved and events pages

--- a/child_pages/events.html
+++ b/child_pages/events.html
@@ -118,6 +118,15 @@
             </div>
             <div class="event-card">
                 <ul class="event-info">
+                    <li class="name"><strong>Vineland School Board Meeting</strong></li>
+                    <li class="description">Stay up to date on the current issues for Vineland Public Schools.</li>
+                    <li class="date-and-time">11/01/23 6pm - 8pm</li>
+                    <li class="location">Landis Administration Building, formerly Landis School. 61 W Landis Ave, Vineland NJ</li>
+                    <li><a href="https://drive.google.com/file/d/1biAjJHa3U1YbB07DljuvGbwLNoCJYFEL/view">Posted Meeting</a></li>
+                </ul>
+            </div>
+            <div class="event-card">
+                <ul class="event-info">
                     <li class="name"><strong>Scoops and Politics</strong></li>
                     <li class="description">An event posted by Mike Testa on Facebook. This MIGHT be a chance to meet incumbents Simonsen and Mclellan. Follow info at Facebook event link to RSVP, which is provided under the tickets section.</li>
                     <li class="date-and-time">11/02/23 6pm - 8pm</li>
