--- a/child_pages/get-involved.html
+++ b/child_pages/get-involved.html
@@ -108,6 +108,13 @@
                                     <p>**Important Note - The location of these breakfasts are always subject to change, be sure to check event info of each individual event date.</p>
                                 </li>
                                 <li class="gi-ul-li">
+                                    <strong>Vineland School Board Meetings:</strong> Subscribe to the 
+                                    <a href="https://explorecumberlandnj.com/calendar/">Vineland Public Schools Youtube channel</a> 
+                                    to view school board meetings. You can also attend in person at the Landis Administration Building,
+                                    formerly Lanids School, located at 61 W. Landis Ave in Vineland. Check our <a href="events.html">events page</a>
+                                    and the <a href="events.html">school boards posted meetings</a> for dates.
+                                </li>
+                                <li class="gi-ul-li">
                                     <strong>County Commissioner Meetings:</strong> These meetings are a great way to understand how 
                                     local government functions and what issues are currently at the forefront. Each meeting has a 
                                     'public comments' section, allowing you to actively participate. Prepare your questions and bring 
