--- a/child_pages/get-involved.html
+++ b/child_pages/get-involved.html
@@ -111,7 +111,7 @@
                                     <strong>Vineland School Board Meetings:</strong> Subscribe to the 
                                     <a href="https://explorecumberlandnj.com/calendar/">Vineland Public Schools Youtube channel</a> 
                                     to view school board meetings. You can also attend in person at the Landis Administration Building,
-                                    formerly Lanids School, located at 61 W. Landis Ave in Vineland. Check our <a href="events.html">events page</a>
+                                    formerly Landis School, located at 61 W. Landis Ave in Vineland. Check our <a href="events.html">events page</a>
                                     and the <a href="events.html">school boards posted meetings</a> for dates.
                                 </li>
                                 <li class="gi-ul-li">
