added vineland public schools app link

--- a/child_pages/get-involved.html
+++ b/child_pages/get-involved.html
@@ -125,6 +125,16 @@
                                     <br>
                                 </li>
                                 <li class="gi-ul-li">
+                                    <strong>Download the Vineland Public Schools App:</strong> Stay informed with what's going on. 
+                                    <br>
+                                    <br>
+                                    <center>Go <a href="https://www.vineland.org/page/parents-main">here</a></center>. 
+                                    <br>
+                                    <br>
+                                    Scroll down and click on the appropriate apple store or google play link.
+                                    <br>
+                                </li>
+                                <li class="gi-ul-li">
                                     <strong>Casual County Events:</strong> Events like Deerfield Day give you a chance to interact with candidates, even if the main focus isn't on the upcoming election. However, these events are often poorly advertised, which we hope to change. 
                                     <br>
                                     <br>
