bayshore bash event added

--- a/child_pages/events.html
+++ b/child_pages/events.html
@@ -82,6 +82,18 @@
             </div>
             <div class="event-card">
                 <ul class="event-info">
+                    <li class="name"><strong>Bayshore Bash</strong></li>
+                    <li class="description">
+                        Republican Campaign Event. Apparently there is a $125 cover, probably minimum donation, 
+                        and an RSVP required. However, the event was learned of from a printed flyer with no accessible link and no 
+                        reseveration details were provided on the <a href="https://www.ccrrogop.org/event-calendar">CCRROGOP Calendar</a>.
+                    </li>
+                    <li class="date-and-time">10/21/23 - 12:30-3:00pm/li>
+                    <li class="location">Charlesworth Hotel, 224 New Jersey Ave., Fortescue, NJ 08321</li>
+                </ul>
+            </div>
+            <div class="event-card">
+                <ul class="event-info">
                     <li class="name"><strong>Atlantic County Meet & Greet</strong></li>
                     <li class="description">Event posted by Mike Testa on Facebook. "Meet us at Estell Manor Park in Atlantic County and let's make memories as we discuss our vision for a brighter future". Follow the link to the post to RSVP, where an internal link under the 'tickets' section is provided.</li>
                     <li class="date-and-time">10/23/23 - 6pm</li>
